language/move-lang/tests/move_check/typing/main_return_type_invalid.exp
error: 

   ┌── tests/move_check/typing/main_return_type_invalid.move:2:5 ───
   │
 2 │ fun main(): u64 {
   │     ^^^^ Invalid main return type
   ·
 2 │ fun main(): u64 {
   │             --- The type: 'u64'
   ·
 2 │ fun main(): u64 {
   │     ---- Is not compatible with: '()'
   │

